removed node being generic